Additional bug fixes

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -18,8 +18,10 @@ html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}main{display:b
 html {
     overflow-x: hidden;
     overflow-y: auto;
+    width: 100%;
 }
 html, body {
+    width: 100%;
     background-color: var(--background-color);
     font-family: 'Roboto';
     font-size: 1.1rem;
