--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -745,7 +745,8 @@ html[data-js] #th__hero-image, html[data-js] #th__hero-content {
     padding: 108px 0 108px;
     position: relative;
     text-align: center;
-    overflow-x: hidden;
+    z-index: 1;
+    width: 100%;
 }
 #th__services h2 {
     color: rgba(0,0,0, .05);
